# zakat_qr

./: LICENSE  README.md  README.rst  requirements.txt  setup.cfg
zakatqr/: __init__.py  zakatqr.py
