[metadata]
name = zakatqr
version = 1.2.1
author = Hamad
author_email = hamad.almogbl@gmail.com
maintainer = Hamad
maintainer_email = hamad.almogbl@gmail.com
description = Django App to Create Zakat Invoice QR Code Image
long_description = file:README.rst
long_description_content_type = text/markdown
url = https://github.com/halmogbl
license = MIT
keywords= django zakat invoice qrcode qr base64 encode
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
